# temporal-practice

./: .env.example  .gitignore  AGENTS.md  DOCKER.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: fastapi-standards.mdc  hydra-configuration.mdc  logging-monitoring.mdc  project-structure.mdc  python-standards.mdc  temporal-workflows.mdc  testing-standards.mdc
conf/: config.yaml
conf/config/: api.yaml  app.yaml  config.yaml  database.yaml  logging.yaml  temporal.yaml
docker/: Dockerfile  docker-compose.yml  init-db.sh
docker/temporal-config/: development-sql.yaml
scripts/: run_worker.py
src/: __init__.py  main.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  health.py  workflows.py
src/models/: __init__.py  workflow.py
src/services/: __init__.py  temporal_service.py
src/utils/: __init__.py  logging.py
src/workers/: __init__.py  temporal_worker.py
src/workflows/: __init__.py  simple_workflow.py
tests/: __init__.py  conftest.py
tests/unit/: test_api.py  test_workflows.py
